# Supply-Chain-Negotiation

./: .env.example  .gitignore  README.md  agents.py  config.py  dashboard.py  negotiation.py  pyproject.toml  requirements.txt  run.py  simulation.py  tools.py  tracing.py
runs/: run_07339a9c_success.json  run_0ce79802_success.json  run_19468dc7_success.json  run_1ce9607e_failure_at_retail.json  run_28a9d8f4_failure_at_retail.json  run_2b617103_success.json  run_8f0209db_success.json  run_99ea3ad8_failure_at_retail.json  run_9d0fb8b5_success.json  run_adfd5e56_failure_at_retail.json  run_bcde0eb5_success.json  run_c64c926a_success.json  run_d16867ac_success.json  run_e8b38759_success.json
src/proveai/: __init__.py  config.py
