[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proveai"
version = "0.1.0"
description = "Trace-first supply chain negotiation simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.49.0",
  "langgraph>=0.2.55",
  "langfuse>=3.2.2",
  "streamlit>=1.44.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.1",
  "pandas>=2.2.3",
  "plotly>=5.24.1",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
